# caspers-kitchens

./: .gitignore  AGENTS.md  CLAUDE.md  CONVERSION_SUMMARY.md  PHASE3_COMPLETION_GUIDE.md  README.md  app.yaml  claude.md  cleanup.sh  databricks.yml  destroy.ipynb  init.ipynb  main.py  package.json  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
agents/refunder/: agent.py
apps/caspers-mcp/: app.yaml  pyproject.toml
apps/ceo-dashboard/: app.yaml  index.html  requirements.txt
apps/invoice-terminal/: app.yaml  databricks.yml  package.json
apps/kitchen-ops/: index.html
apps/order-review/: index.html
apps/quest-controller/: index.html  requirements.txt
blog/: _config.yml
data/universe/crates/cli/: Cargo.toml  pyproject.toml
data/universe/crates/universe/: Cargo.toml  README.md
data/universe/crates/universe/src/: error.rs  idents.rs  lib.rs  python.rs  templates.rs  test_utils.rs
data/universe/crates/universe/src/agents/: kitchen.rs  kitchen_next.rs  kitchen_tests.rs  mod.rs  population.rs  site.rs
data/universe/crates/universe/src/agents/functions/: create_order.rs  mod.rs
data/universe/crates/universe/src/agents/functions/create_order/: fixed.rs
data/universe/crates/universe/src/builders/: mod.rs  results_events.rs  results_metrics.rs  state_objects.rs  state_orders.rs  state_population.rs
data/universe/crates/universe/src/context/: memory.rs  mod.rs  storage.rs
data/universe/crates/universe/src/context/schemas/: mod.rs  results.rs  snapshots.rs  system.rs
data/universe/crates/universe/src/functions/: h3_long_lat_as_h3.rs  mod.rs  uuid_to_str.rs  uuid_v7.rs
data/universe/crates/universe/src/models/: mod.rs
data/universe/crates/universe/src/simulation/: builder.rs  events.rs  mod.rs  next.rs  population_event_schemas.rs
data/universe/crates/universe/src/state/: mod.rs  movement.rs  movement_next.rs  objects.rs  orders.rs  parse_json.rs  population.rs
data/universe/crates/universe/templates/base/: ingredients.json
data/universe/crates/universe/templates/base/brands/: asian.json  fast_food.json  mexican.json
data/universe/crates/universe/templates/base/sites/: amsterdam.json  london.json
demos/: README.md
demos/knowledge-assistant-codebase/: .gitignore  README.md  chunking_strategy_comparison.ipynb  eval_questions_final.csv  pyproject.toml
docs/: README.md  _config.yml  caspers_corporate_handbook.md  dataflow-diagram.md  dataflow-diagram.mermaid  developer-onboarding.md  generate-diagrams.sh  generate_manuals.py  index.html  index.md  mermaid-image-generation.md  technical-reference.md  template.md
jobs/: complaint_agent_stream.ipynb  complaint_generator.ipynb  refund_recommender_stream.ipynb  support_request_agent_stream.ipynb  support_request_generator.ipynb
scripts/: grant_player_access.py
stages/: apps.ipynb  canonical_data.ipynb  ceo_add_locations.ipynb  ceo_app.ipynb  ceo_document_data.ipynb  ceo_genie_spaces.ipynb  ceo_knowledge_agents.ipynb  ceo_lakebase.ipynb  ceo_readiness_check.ipynb  ceo_supervisor.ipynb  complaint_agent.ipynb  complaint_lakebase.ipynb  contract_data.ipynb  contract_knowledge_agent.ipynb  dispute_agent.ipynb  fraud_agent.ipynb  fraud_stream.ipynb  game_app.ipynb  game_dashboard.ipynb  game_genie.ipynb  game_lakebase.ipynb  game_review_app.ipynb  game_setup.ipynb  inspection_data.ipynb  inspection_knowledge_agent.ipynb  invoice_data.ipynb  invoice_genie.ipynb  invoice_knowledge_agent.ipynb  invoice_lakebase.ipynb  invoice_pipeline.ipynb  invoice_supervisor.ipynb  lakebase.ipynb  lakeflow.ipynb  menu_data.ipynb  menu_genie.ipynb  menu_knowledge_agent.ipynb  menu_pipeline.ipynb  menu_supervisor.ipynb  raw_data.ipynb  refunder_agent.ipynb  (+6 more)
utils/: resolve_tasks.py
(+118 files in other folders)
