[package]
name = "caspers-universe-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "caspers"
path = "src/main.rs"

[dependencies]
caspers-universe = { path = "../universe", features = ["templates"] }

arrow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true }

axum = "0.8"
clap = { version = "4.5.37", features = ["derive", "env"] }
dialoguer = "0.12.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
