[package]
name = "caspers-universe"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
readme = "README.md"
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true, features = [
  "serde",
  "canonical_extension_types",
] }
chrono = { workspace = true }
datafusion = { workspace = true }
geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
itertools = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
paste = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7", "v5"] }

counter = { version = "0.6.0" }
dashmap = { version = "6" }
fast_paths = "1.0.0"
fake = { version = "4", features = ["derive"] }
futures = { version = "0.3" }
geo = { version = "0.31", features = ["serde"] }
geo-traits = "0.3"
# explicit dependency to enable serde support for geo-types
geo-types = { version = "0.7.16", features = ["serde"] }
geodatafusion = { version = "0.1.1"}
h3o = { version = "0.9.3", features = ["geo"] }
indexmap = { version = "2.9.0" }
opentelemetry = "0.31.0"
rand = { version = "0.9", features = ["std", "std_rng"] }
strum = { version = "0.27", features = ["derive"] }
tracing-opentelemetry = "0.32.0"

# python feature
pyo3 = { version = "0.26", optional = true }

[dev-dependencies]
approx = "0.5.1"
rstest = "0.26.0"
test-log = "0.2.17"
tokio = { version = "1", features = ["full"] }
# pretty_assertions = "1.4.1"

[features]
default = []
python = ["pyo3"]
templates = []

[package.metadata.cargo-machete]
ignored = ["geo-types"]
